--- a/src/app/add-info/add-info.component.html
+++ b/src/app/add-info/add-info.component.html
@@ -1,70 +1,64 @@
-<div style="width:50%;margin-left: auto;margin-right: auto;margin-top:2em"> 
-  <div>
-    <ul>
-      <li (click)="switch('new')"><a>enregistrement</a></li>
-      <li (click)="switch('liste')"><a>liste d'absence</a></li>
-    </ul>
-  </div>
-  <div>
-      <input [(ngModel)]="searchText" placeholder="prenom ou telephone" class="form-control" style="widows: 40%;" />
-  </div>
-  <div *ngIf="liste">
-    
-    <table class="table table-striped table-condensed">
-      <thead>
-          <tr>
-              <th>Prenom</th>
-              <th>Nom</th>
-              <th>Date</th>
-              <th>Action</th>
-          </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let a of listeAbsence | bbspipe : searchText">
-          <td>{{a.prenom}}</td>
-          <td>{{a.nom}}</td>
-          <td>{{a.date}}</td>
-          <!--<td><input type="button" value="modifier" class="btn btn-primary" /></td>-->
-          <td><input (click)="supprimerAbsence(a)" type="button" value="supprimer" class="btn btn-danger" /></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div *ngIf="new">
-     <!-- <form>
-          <div class="form-group">
-            <label>Employes :</label>
-            <select [(ngModel)]="emp" name="emp" class="form-control">
-              <option value="">veuillez choisir un employe</option>
-              <option *ngFor="let e of employes" value="{{e}}">{{e.prenom +" "+e.nom}}</option>
-            </select>
+<div >
+  <div class="row" style="margin-top:1rem">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> 
+          <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+              <ul>
+                <li (click)="switch('new')"><a>enregistrement</a></li>
+                <li (click)="switch('liste')"><a>liste d'absence</a></li>
+              </ul>
+            </div>
+            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
+                <input [(ngModel)]="searchText" placeholder="prenom ou telephone" class="form-control" style="widows: 40%;" />
+            </div>
           </div>
-          <div class="form-group">
-            <label>Date :</label>
-            <input  [(ngModel)]="date" name="date" type="date" class="form-control"/>
+          
+          <div *ngIf="liste">
+            
+            <table class="table table-striped table-condensed">
+              <thead>
+                  <tr>
+                      <th>Prenom</th>
+                      <th>Nom</th>
+                      <th>Date</th>
+                      <th>Action</th>
+                  </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let a of listeAbsence | bbspipe : searchText">
+                  <td>{{a.prenom}}</td>
+                  <td>{{a.nom}}</td>
+                  <td>{{a.date}}</td>
+                  <!--<td><input type="button" value="modifier" class="btn btn-primary" /></td>-->
+                  <td><input (click)="supprimerAbsence(a)" type="button" value="supprimer" class="btn btn-danger" /></td>
+                </tr>
+              </tbody>
+            </table>
           </div>
-          <button class="btn btn-primary">valider</button>
-        </form>-->
-        <table class="table table-condensed table-striped">
-          <thead>
-            <tr>
-              <th>Prenom</th>
-              <th>Nom</th>
-              <th>Telephone</th>
-              <th>Action</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let e of employes | bbspipe : searchText">
-              <td>{{e.prenom}}</td>
-              <td>{{e.nom}}</td>
-              <td>{{e.telephone}}</td>
-              <td><input class="btn btn-primary" (click)="marquer(e,absent)" type="button" value="Marquer" /></td>
-            </tr>
-          </tbody>
-        </table>
+          <div *ngIf="new">
+                <table class="table table-condensed table-striped">
+                  <thead>
+                    <tr>
+                      <th>Prenom</th>
+                      <th>Nom</th>
+                      <th>Telephone</th>
+                      <th>Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let e of employes | bbspipe : searchText">
+                      <td>{{e.prenom}}</td>
+                      <td>{{e.nom}}</td>
+                      <td>{{e.telephone}}</td>
+                      <td><input class="btn btn-primary" (click)="marquer(e,absent)" type="button" value="Marquer" /></td>
+                    </tr>
+                  </tbody>
+                </table>
+          </div>
+        </div>
   </div>
 </div>
+
 <ng-template #absent >
   <div class="modal-header">
           <h4 class="modal-title" id="myModalLabel">Enregistrement D'absence</h4>
